[package]
name = "srl_http"
version = "0.1.0"
authors = ["Jason Dagit <dagit@galois.com>"]
edition = "2018"

[lib]
name = "srl_http"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
