[package]
name = "srlrepl"
version = "0.1.0"
authors = ["Jason Dagit <dagit@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "*"
srl_http = { path = "../srl-http" }
reqwest = "*"
tokio = { version = "0.2", features = ["full"] }
